# typst-pdf

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-and-push-image.yml
assets/templates/report/: template.typ
data/examples/: all-markdown-syntax.md
data/templates/report/: template.json  template.typ
src/: lib.rs  main.rs
src/app/: mod.rs
src/config/: mod.rs  settings.rs
src/handlers/: middleware.rs  mod.rs  routes.rs
src/infra/: mod.rs  renderer.rs  state.rs
src/models/: document.rs  job.rs  mod.rs  template.rs
src/repositories/: artifact_repository.rs  mod.rs  template_repository.rs  workspace_repository.rs
src/services/: mod.rs  render_service.rs
src/utils/: error.rs  local_assets.rs  markdown.rs  mod.rs  telemetry.rs
